<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:visibility="visible"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/txtUser"
        android:background="@android:color/background_light"
        android:hint="@string/txtUser"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUser"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:onClick="iniciarActivityRegistrar"
        android:text="@string/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="login"
        android:text="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <TextView
        android:id="@+id/txtBienvenido"
        android:layout_width="195dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtBienvenido"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUser"
        tools:text="@string/txtPassword" />

    <TextView
        android:id="@+id/lblUser"
        android:layout_width="109dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtUser"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBienvenido" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/txtUser"
        android:background="@android:color/background_light"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>